Fix for bug #13176. Changed CantRenderReplacedElement() to reset the primary frame mapping for OBJECT elements